service worker: s13n: Support partial responses from blobs better.

This CL allows media to play and be seekable when service worker
provides the response from cache storage.
Live demo from Jake Archibald: https://static-misc.glitch.me/sw-audio-bug/

This CL fixes two things:
- Supports blob responses from service worker for partial requests with
  a range of [x, -1] where x is not 0 (the zero case was already
  supported). This requires changes to
  ServiceWorkerLoaderHelpers::ReadBlobResponseBody and
  mojom.Blob.ReadRange().
- Sets ResourceResponseInfo.content_length based on the HTTP header
  Content-Length for service worker loaders. This allows Chromium's
  media code to allow seeking over the media source.

Bug: 892227
Change-Id: I9e6f6faaae7b83ad3aee9c0f217834d62c214b85
Reviewed-on: https://chromium-review.googlesource.com/c/1263739
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597057}