storage/browser/blob/blob_impl.cc
@@ -5,8 +5,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "storage/browser/blob/blob_impl.h"
 
+#include <limits>
 #include <memory>
 #include <utility>
+#include <vector>
 
 #include "net/base/io_buffer.h"
 #include "net/disk_cache/disk_cache.h"
@@ -109,7 +111,10 @@ void BlobImpl::ReadRange(uint64_t offset,
                          mojo::ScopedDataPipeProducerHandle handle,
                          blink::mojom::BlobReaderClientPtr client) {
   MojoBlobReader::Create(
-      handle_.get(), net::HttpByteRange::Bounded(offset, offset + length - 1),
+      handle_.get(),
+      (length == std::numeric_limits<uint64_t>::max())
+          ? net::HttpByteRange::RightUnbounded(offset)
+          : net::HttpByteRange::Bounded(offset, offset + length - 1),
       std::make_unique<ReaderDelegate>(std::move(handle), std::move(client)));
 }
 
